# Claims

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/: 0001-miner-task.md  0001-overview.md  0002-validator-scoring.md  0003-schema.md  0004-incentive-mechanism.md  0004-schema.md  0005-incentive-mechanism.md  0005-ontology-linking.md  0006-ontology-linking.md  0006-schema-epistemic-ontology.md  0007-roadmap-to-subnet.md  0007-schema-epistemic-ontology.md  0008-extraction-audit-flow.md  0009-v0-miner-validator.md  0010-bittensor-localnet.md  0011-agent-v1-canonical-miner.md  0012-ara-vs-claims-v0-schema.md  0013-agent-v1-validator-seal-and-benchmarks.md  0014-agent-v1-miner-system.md  0015-agent-v1-validator-system.md  README.md
examples/: agent_v1_metadata_smoke.txt  agent_v1_smoke.txt
miner/: __init__.py
neurons/: README.md  __init__.py  backend_client.py  miner.py  protocol.py  tasks.py  validator.py
rfc/: 0001-overview.md  0002-miner-task.md  0003-validator-scoring.md  0004-schema.md  0006-ontology-linking.md
schemas/: chunk.schema.json  claim.schema.json  claim_evidence_link.schema.json  claimframe.schema.json  evidence_item.schema.json  extraction.schema.json  judge_v1_report.schema.json  meta_assertion.schema.json  paper.schema.json  source.schema.json  span.schema.json  validator_score.schema.json
scripts/: run_demo.py  score_payload.py  validate_payload.py
simulator/: __init__.py  mock_miner.py  mock_validator.py  ontology_mapping.py  protocol.py  scoring.py
tests/: test_agent_artifact.py  test_claim_handle.py  test_miner_agent_v1.py  test_miner_ara_v1.py  test_miner_v0_abstract_full_paper.py  test_mock_pipeline.py  test_neuron_agent_v1_validator.py  test_neuron_batch_contract.py  test_schema_validation.py  test_validator_agent_v1.py  test_validator_scoring.py  (+1 more)
(+239 files in other folders)
