[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claims-subnet-rfc"
version = "0.1.0"
description = "Public Claims subnet repo with self-contained section_context_v1 miner and judge_v1 validator packages."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy-ai",
    "lxml",
    "openpyxl",
    "pydantic>=2",
    "pypdf",
    "python-dotenv",
    "requests",
]

[tool.setuptools.packages.find]
include = ["miner*", "validator*"]
