[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claims-subnet-rfc"
version = "0.1.0"
description = "Public Claims subnet repo with self-contained miner, ontology enrichment, and validator packages."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bittensor",
    "dspy-ai",
    "langchain",
    "langchain-openai",
    "lxml",
    "openpyxl",
    "pydantic>=2",
    "pypdf",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["miner*", "validator*", "neurons*"]
